--- a/anokha/css/style1.css
+++ b/anokha/css/style1.css
@@ -1,3 +1,12 @@
+
+/*
+Author: Hem Sagar
+CSS credits: Hem Sagar
+CSS layout reference: Youtube video url: https://www.youtube.com/watch?v=T76bbMVMX6M
+created date: 24-DEC-2022
+modified date: 5-JAN-2023
+*/
+
 *{
     margin:0;
     padding:0;
