--- a/anokha/css/style2.css
+++ b/anokha/css/style2.css
@@ -1,3 +1,11 @@
+/*
+Author: Hem Sagar
+CSS credits: Hem Sagar
+CSS layout reference: w3schools, youtube video
+created date: 24-DEC-2022
+modified date: 5-JAN-2023
+*/
+
 *{
     margin:0;
     padding:0;
