--- a/anokha/css/register.css
+++ b/anokha/css/register.css
@@ -166,3 +166,15 @@ form span{
     padding: 0px 5px;
     color:rgba(240, 248, 255, 0.53);
 }
+.footer {
+    position:relative;
+    background-color: #01204c;
+    padding: 5px 0;
+    font-family: "Roboto", sans-serif;
+}
+
+.footer p {
+    color: #fff;
+    margin: 0;
+    text-align: center;
+}
